--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
+    "antd": "^5.9.0",
     "final-form": "^4.20.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
