--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.9.0",
+    "dayjs": "^1.11.10",
+    "file-saver": "^2.0.5",
     "final-form": "^4.20.10",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-final-form": "^6.5.9",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
